--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="en" class="relative">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luxury Travel in Spain and Portugal | Spain Collection</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Luxury Travel in Spain and Portugal | Spain Collection</title>
+  <link rel="shortcut icon" href="/icons/favicon-32x32.webp" type="image/x-icon">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
