--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Luxury Travel in Spain and Portugal | Spain Collection</title>
-  <link rel="preload" href="/Fonts/Inter.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
-  <link rel="preload" href="/Fonts/Inter_Italic.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
-  <link rel="preload" href="/Fonts/IbarraRealNova.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
-  <link rel="preload" href="/Fonts/IbarraRealNova_Italic.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
+  <link rel="preload" href="/Fonts/Inter.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="/Fonts/Inter_Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="/Fonts/IbarraRealNova.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="/Fonts/IbarraRealNova_Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="/Fonts/SaolDisplay-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="/Fonts/SaolDisplay-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
   <link rel="preload" href="/Fonts/SaolDisplay-LightItalic.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
